Ajuste de cors para sistema distribuido